...
  };

  const handleLogin = async () => {
    console.log("I am definitely tapped")
    handleChange('error', '');
    if (!validateEmail(loginData.email)) {
      handleChange('error', 'Please enter a valid email address.');
      return;
    }

    setLoading(true);
    try {
      await loginUser(loginData.email, loginData.password);
...
  return (
    <GradientBackground>
      <KeyboardAvoidingView behavior={Platform.OS === 'ios' ? 'padding' : 'height'} style={{ flex: 1 }}>
        <ScrollView contentContainerStyle={{ flexGrow: 1 }}>
          <View style={commonStyles.container}>
            <Image source={require('../images/login.png')} style={styles.image} />
            <Text style={styles.textTitle} testID="loginScreenTitle">Welcome Back!</Text>

            {loginData.loginMethod === 'email' ? (
              <>
                <TextInput
                  style={styles.inputEmail}
                  placeholder="Your Email Address"
                  placeholderTextColor='#DDB1E4'
                  value={loginData.email}
                  onChangeText={value => handleChange('email', value)}
                  autoCapitalize='none'
                  testID="emailInputLogin"
                />
                <View style={styles.inputPasswordContainer}>
                <TextInput
                  style={styles.input}
                  placeholder="Your Password"
                  placeholderTextColor='#DDB1E4'
                  secureTextEntry={!showPassword}
                  value={loginData.password}
                  onChangeText={value => handleChange('password', value)}
                  autoCapitalize='none'
                  testID="passwordInputLogin"
                />
                  <TouchableOpacity onPress={toggleShowPassword} style={styles.showHideButton} testID="showPasswordButton">
                    <Text style={styles.showHideText}>
                      {showPassword ? 'Hide' : 'Show'}
                    </Text>
                  </TouchableOpacity>
                </View>
                {loginData.error && <Text style={styles.errorText}>{loginData.error}</Text>}
                <Pressable
                  style={[commonStyles.buttonContainer, loading && styles.disabledButton]}
                  onPress={handleLogin}
                  disabled={loading}
                  testID="loginButton"
                >
                  <Text style={commonStyles.buttonTitle}>{loading ? 'Logging In...' : 'Start Creating'}</Text>
                </Pressable>
              </>
            ) : (
              <>
...
                )}
              </>
            )}

            {loginData.loginMethod === 'email' && (
              <>
                <Text style={styles.forgotPassword} onPress={goToResetPassword} testID="forgotPasswordLink">Forgot Password?</Text>
                <View style={styles.registerContainer}>
                  <Text style={styles.textRegister}>
                    Need an account?
                  </Text>
                  <TouchableOpacity onPress={goToRegister} testID="signUpLink">
                    <Text style={styles.linkText}>Sign Up</Text>
                  </TouchableOpacity>
                </View>

              </>
            )}
...
