...
        <Text accessibilityLabel="Ready Text: Are You Ready to Start Your Journey?" style={styles.readyText}>Are You Ready to Start Your Journey?</Text>
        <TouchableOpacity
          testID="beginJourney"
          style={commonStyles.buttonContainer}
          activeOpacity={0.7}
          onPress={handleNavigation}>
          <Text style={commonStyles.buttonTitle}>Begin Your Poetry Journey</Text>
        </TouchableOpacity>
      </View>
    </GradientBackground>
  );
}

...
