...
    <GradientBackground>
      <KeyboardAvoidingView
        behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
        style={{flex: 1}}
      >
        <ScrollView testID="scrollView" contentContainerStyle={{flexGrow: 1, justifyContent: 'center'}}>
      <View style={commonStyles.container} testID="registerScreen">
        <Image
          source={require('../images/registration.png')} // Replace with the path to your image file
          style={styles.image}
        />
        <Text style={styles.text_title}>Get Started with PoetCraft</Text>
        <Text style={styles.text_login}>
...
