...
  };

  if (isLoading) {
    return (
      <GradientBackground>
        <View style={commonStyles.container}>
          <Text style={styles.loadingText}>Loading your modules...</Text>
          <ActivityIndicator size="large" color="#DDB1E4" />
        </View>
      </GradientBackground>
    );
  }

  return (
    <GradientBackground>
      <View style={commonStyles.container}>
        <Text style={styles.text_title}>Explore the Modules</Text>
        <Image
          source={require('../images/heartline.png')}
          style={styles.heartlineimage}
        />
        {modules && (
          <FlatList
...
